--- a/app/src/main/res/layout/motion.xml
+++ b/app/src/main/res/layout/motion.xml
@@ -8,17 +8,20 @@
     android:paddingBottom="5dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:background="@drawable/rectangle">
+    android:background="@drawable/rectangle"
+    android:id="@+id/motion">
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Move"
+        android:text="@string/move"
         android:textSize="16sp"
         android:textColor="@color/darkBlack"
-        android:layout_marginRight="5dp"/>
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp" />
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" 
         android:entries="@array/motion_spinner_data"/>
